--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "copyfiles": "^2.4.1",
     "vite": "^4.4.5",
+    "vite-plugin-pwa": "^1.2.0",
     "wrangler": "^4.53.0"
   }
 }
