--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,11 +6,20 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#39c5bb",
-  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/public/favicon.ico",
+      "src": "/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "/favicon.ico",
+      "sizes": "192x192",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "/favicon.ico",
+      "sizes": "512x512",
       "type": "image/x-icon"
     }
   ],
